Trabalho-Part-2/monga.output
State 64 conflicts: 14 shift/reduce
State 65 conflicts: 14 shift/reduce
State 102 conflicts: 14 shift/reduce
State 103 conflicts: 14 shift/reduce
State 104 conflicts: 14 shift/reduce
State 105 conflicts: 14 shift/reduce
State 106 conflicts: 14 shift/reduce
State 107 conflicts: 14 shift/reduce
State 108 conflicts: 14 shift/reduce
State 109 conflicts: 14 shift/reduce
State 110 conflicts: 14 shift/reduce
State 111 conflicts: 14 shift/reduce
State 112 conflicts: 14 shift/reduce
State 113 conflicts: 14 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | define program

    3 define: define_variable
    4       | define_function

    5 define_variable: TOKEN_IDENTIFIER TOKEN_COLON variable_type TOKEN_SEMICOLON

    6 variable_type: TOKEN_WORD_BOOL
    7              | TOKEN_WORD_CHAR
    8              | TOKEN_WORD_INT
    9              | TOKEN_WORD_FLOAT
   10              | TOKEN_OPEN_BRACKETS variable_type TOKEN_CLOSE_BRACKETS

   11 define_function: TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES parameters TOKEN_CLOSE_PARENTHESES TOKEN_COLON variable_type block
   12                | TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES parameters TOKEN_CLOSE_PARENTHESES block

   13 parameters: %empty
   14           | parameter TOKEN_COMMA parameters
   15           | parameter

   16 parameter: TOKEN_IDENTIFIER TOKEN_COLON variable_type

   17 block: TOKEN_OPEN_BRACES define_variables commands TOKEN_CLOSE_BRACES
   18      | TOKEN_OPEN_BRACES define_variables TOKEN_CLOSE_BRACES
   19      | TOKEN_OPEN_BRACES commands TOKEN_CLOSE_BRACES
   20      | TOKEN_OPEN_BRACES TOKEN_CLOSE_BRACES

   21 define_variables: define_variable
   22                 | define_variables define_variable

   23 commands: command
   24         | commands command

   25 command: TOKEN_IF expression block
   26        | TOKEN_IF expression block TOKEN_ELSE block
   27        | TOKEN_WHILE expression block
   28        | variable TOKEN_ASSIGNMENT expression TOKEN_SEMICOLON
   29        | TOKEN_RETURN expression TOKEN_SEMICOLON
   30        | function_call TOKEN_SEMICOLON
   31        | TOKEN_AT_SIGN expression TOKEN_SEMICOLON
   32        | block

   33 variable: TOKEN_IDENTIFIER
   34         | expression TOKEN_OPEN_BRACKETS expression TOKEN_CLOSE_BRACKETS

   35 expression: TOKEN_TRUE
   36           | TOKEN_FALSE
   37           | TOKEN_CHARACTER
   38           | TOKEN_INTEGER
   39           | TOKEN_FLOAT
   40           | TOKEN_STRING
   41           | variable
   42           | TOKEN_OPEN_PARENTHESES expression TOKEN_CLOSE_PARENTHESES
   43           | function_call
   44           | expression TOKEN_AS variable_type
   45           | TOKEN_NEW variable_type TOKEN_OPEN_BRACKETS expression TOKEN_CLOSE_BRACKETS
   46           | TOKEN_SUBTRACT expression
   47           | expression TOKEN_ADD expression
   48           | expression TOKEN_SUBTRACT expression
   49           | expression TOKEN_MULTIPLY expression
   50           | expression TOKEN_DIVIDE expression
   51           | expression TOKEN_EQUAL expression
   52           | expression TOKEN_NOT_EQUAL expression
   53           | expression TOKEN_LESS_EQUAL expression
   54           | expression TOKEN_GREATER_EQUAL expression
   55           | expression TOKEN_LESS expression
   56           | expression TOKEN_GREATER expression
   57           | TOKEN_NOT expression
   58           | expression TOKEN_AND expression
   59           | expression TOKEN_OR expression

   60 function_call: TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES expression_list TOKEN_CLOSE_PARENTHESES
   61              | TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES TOKEN_CLOSE_PARENTHESES

   62 expression_list: expression
   63                | expression TOKEN_COMMA expression_list


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_TRUE <i> (258) 35
TOKEN_FALSE <i> (259) 36
TOKEN_CHARACTER <c> (260) 37
TOKEN_INTEGER <i> (261) 38
TOKEN_FLOAT <f> (262) 39
TOKEN_STRING <s> (263) 40
TOKEN_IDENTIFIER <s> (264) 5 11 12 16 33 60 61
TOKEN_NEW (265) 45
TOKEN_WORD_BOOL (266) 6
TOKEN_WORD_CHAR (267) 7
TOKEN_WORD_INT (268) 8
TOKEN_WORD_FLOAT (269) 9
TOKEN_IF (270) 25 26
TOKEN_ELSE (271) 26
TOKEN_WHILE (272) 27
TOKEN_AS (273) 44
TOKEN_RETURN (274) 29
TOKEN_OPEN_PARENTHESES (275) 11 12 42 60 61
TOKEN_CLOSE_PARENTHESES (276) 11 12 42 60 61
TOKEN_OPEN_BRACKETS (277) 10 34 45
TOKEN_CLOSE_BRACKETS (278) 10 34 45
TOKEN_OPEN_BRACES (279) 17 18 19 20
TOKEN_CLOSE_BRACES (280) 17 18 19 20
TOKEN_EQUAL (281) 51
TOKEN_NOT_EQUAL (282) 52
TOKEN_LESS_EQUAL (283) 53
TOKEN_GREATER_EQUAL (284) 54
TOKEN_AND (285) 58
TOKEN_OR (286) 59
TOKEN_SUBTRACT (287) 46 48
TOKEN_ADD (288) 47
TOKEN_MULTIPLY (289) 49
TOKEN_DIVIDE (290) 50
TOKEN_ASSIGNMENT (291) 28
TOKEN_LESS (292) 55
TOKEN_GREATER (293) 56
TOKEN_NOT (294) 57
TOKEN_AT_SIGN (295) 31
TOKEN_COMMA (296) 14 63
TOKEN_COLON (297) 5 11 16
TOKEN_SEMICOLON (298) 5 28 29 30 31


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1 2, on right: 0 2
define (46)
    on left: 3 4, on right: 2
define_variable (47)
    on left: 5, on right: 3 21 22
variable_type (48)
    on left: 6 7 8 9 10, on right: 5 10 11 16 44 45
define_function (49)
    on left: 11 12, on right: 4
parameters (50)
    on left: 13 14 15, on right: 11 12 14
parameter (51)
    on left: 16, on right: 14 15
block (52)
    on left: 17 18 19 20, on right: 11 12 25 26 27 32
define_variables (53)
    on left: 21 22, on right: 17 18 22
commands (54)
    on left: 23 24, on right: 17 19 24
command (55)
    on left: 25 26 27 28 29 30 31 32, on right: 23 24
variable (56)
    on left: 33 34, on right: 28 41
expression (57)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57 58 59, on right: 25 26 27 28 29 31 34 42 44 45 46
    47 48 49 50 51 52 53 54 55 56 57 58 59 62 63
function_call (58)
    on left: 60 61, on right: 30 43
expression_list (59)
    on left: 62 63, on right: 60 63


State 0

    0 $accept: . program $end

    TOKEN_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program          go to state 2
    define           go to state 3
    define_variable  go to state 4
    define_function  go to state 5


State 1

    5 define_variable: TOKEN_IDENTIFIER . TOKEN_COLON variable_type TOKEN_SEMICOLON
   11 define_function: TOKEN_IDENTIFIER . TOKEN_OPEN_PARENTHESES parameters TOKEN_CLOSE_PARENTHESES TOKEN_COLON variable_type block
   12                | TOKEN_IDENTIFIER . TOKEN_OPEN_PARENTHESES parameters TOKEN_CLOSE_PARENTHESES block

    TOKEN_OPEN_PARENTHESES  shift, and go to state 6
    TOKEN_COLON             shift, and go to state 7


State 2

    0 $accept: program . $end

    $end  shift, and go to state 8


State 3

    2 program: define . program

    TOKEN_IDENTIFIER  shift, and go to state 1

    $default  reduce using rule 1 (program)

    program          go to state 9
    define           go to state 3
    define_variable  go to state 4
    define_function  go to state 5


State 4

    3 define: define_variable .

    $default  reduce using rule 3 (define)


State 5

    4 define: define_function .

    $default  reduce using rule 4 (define)


State 6

   11 define_function: TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES . parameters TOKEN_CLOSE_PARENTHESES TOKEN_COLON variable_type block
   12                | TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES . parameters TOKEN_CLOSE_PARENTHESES block

    TOKEN_IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 13 (parameters)

    parameters  go to state 11
    parameter   go to state 12


State 7

    5 define_variable: TOKEN_IDENTIFIER TOKEN_COLON . variable_type TOKEN_SEMICOLON

    TOKEN_WORD_BOOL      shift, and go to state 13
    TOKEN_WORD_CHAR      shift, and go to state 14
    TOKEN_WORD_INT       shift, and go to state 15
    TOKEN_WORD_FLOAT     shift, and go to state 16
    TOKEN_OPEN_BRACKETS  shift, and go to state 17

    variable_type  go to state 18


State 8

    0 $accept: program $end .

    $default  accept


State 9

    2 program: define program .

    $default  reduce using rule 2 (program)


State 10

   16 parameter: TOKEN_IDENTIFIER . TOKEN_COLON variable_type

    TOKEN_COLON  shift, and go to state 19


State 11

   11 define_function: TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES parameters . TOKEN_CLOSE_PARENTHESES TOKEN_COLON variable_type block
   12                | TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES parameters . TOKEN_CLOSE_PARENTHESES block

    TOKEN_CLOSE_PARENTHESES  shift, and go to state 20


State 12

   14 parameters: parameter . TOKEN_COMMA parameters
   15           | parameter .

    TOKEN_COMMA  shift, and go to state 21

    $default  reduce using rule 15 (parameters)


State 13

    6 variable_type: TOKEN_WORD_BOOL .

    $default  reduce using rule 6 (variable_type)


State 14

    7 variable_type: TOKEN_WORD_CHAR .

    $default  reduce using rule 7 (variable_type)


State 15

    8 variable_type: TOKEN_WORD_INT .

    $default  reduce using rule 8 (variable_type)


State 16

    9 variable_type: TOKEN_WORD_FLOAT .

    $default  reduce using rule 9 (variable_type)


State 17

   10 variable_type: TOKEN_OPEN_BRACKETS . variable_type TOKEN_CLOSE_BRACKETS

    TOKEN_WORD_BOOL      shift, and go to state 13
    TOKEN_WORD_CHAR      shift, and go to state 14
    TOKEN_WORD_INT       shift, and go to state 15
    TOKEN_WORD_FLOAT     shift, and go to state 16
    TOKEN_OPEN_BRACKETS  shift, and go to state 17

    variable_type  go to state 22


State 18

    5 define_variable: TOKEN_IDENTIFIER TOKEN_COLON variable_type . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 23


State 19

   16 parameter: TOKEN_IDENTIFIER TOKEN_COLON . variable_type

    TOKEN_WORD_BOOL      shift, and go to state 13
    TOKEN_WORD_CHAR      shift, and go to state 14
    TOKEN_WORD_INT       shift, and go to state 15
    TOKEN_WORD_FLOAT     shift, and go to state 16
    TOKEN_OPEN_BRACKETS  shift, and go to state 17

    variable_type  go to state 24


State 20

   11 define_function: TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES parameters TOKEN_CLOSE_PARENTHESES . TOKEN_COLON variable_type block
   12                | TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES parameters TOKEN_CLOSE_PARENTHESES . block

    TOKEN_OPEN_BRACES  shift, and go to state 25
    TOKEN_COLON        shift, and go to state 26

    block  go to state 27


State 21

   14 parameters: parameter TOKEN_COMMA . parameters

    TOKEN_IDENTIFIER  shift, and go to state 10

    $default  reduce using rule 13 (parameters)

    parameters  go to state 28
    parameter   go to state 12


State 22

   10 variable_type: TOKEN_OPEN_BRACKETS variable_type . TOKEN_CLOSE_BRACKETS

    TOKEN_CLOSE_BRACKETS  shift, and go to state 29


State 23

    5 define_variable: TOKEN_IDENTIFIER TOKEN_COLON variable_type TOKEN_SEMICOLON .

    $default  reduce using rule 5 (define_variable)


State 24

   16 parameter: TOKEN_IDENTIFIER TOKEN_COLON variable_type .

    $default  reduce using rule 16 (parameter)


State 25

   17 block: TOKEN_OPEN_BRACES . define_variables commands TOKEN_CLOSE_BRACES
   18      | TOKEN_OPEN_BRACES . define_variables TOKEN_CLOSE_BRACES
   19      | TOKEN_OPEN_BRACES . commands TOKEN_CLOSE_BRACES
   20      | TOKEN_OPEN_BRACES . TOKEN_CLOSE_BRACES

    TOKEN_TRUE              shift, and go to state 30
    TOKEN_FALSE             shift, and go to state 31
    TOKEN_CHARACTER         shift, and go to state 32
    TOKEN_INTEGER           shift, and go to state 33
    TOKEN_FLOAT             shift, and go to state 34
    TOKEN_STRING            shift, and go to state 35
    TOKEN_IDENTIFIER        shift, and go to state 36
    TOKEN_NEW               shift, and go to state 37
    TOKEN_IF                shift, and go to state 38
    TOKEN_WHILE             shift, and go to state 39
    TOKEN_RETURN            shift, and go to state 40
    TOKEN_OPEN_PARENTHESES  shift, and go to state 41
    TOKEN_OPEN_BRACES       shift, and go to state 25
    TOKEN_CLOSE_BRACES      shift, and go to state 42
    TOKEN_SUBTRACT          shift, and go to state 43
    TOKEN_NOT               shift, and go to state 44
    TOKEN_AT_SIGN           shift, and go to state 45

    define_variable   go to state 46
    block             go to state 47
    define_variables  go to state 48
    commands          go to state 49
    command           go to state 50
    variable          go to state 51
    expression        go to state 52
    function_call     go to state 53


State 26

   11 define_function: TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES parameters TOKEN_CLOSE_PARENTHESES TOKEN_COLON . variable_type block

    TOKEN_WORD_BOOL      shift, and go to state 13
    TOKEN_WORD_CHAR      shift, and go to state 14
    TOKEN_WORD_INT       shift, and go to state 15
    TOKEN_WORD_FLOAT     shift, and go to state 16
    TOKEN_OPEN_BRACKETS  shift, and go to state 17

    variable_type  go to state 54


State 27

   12 define_function: TOKEN_IDENTIFIER TOKEN_OPEN_PARENTHESES parameters TOKEN_CLOSE_PARENTHESES block .

    $default  reduce using rule 12 (define_function)


State 28

   14 parameters: parameter TOKEN_COMMA parameters .

    $default  reduce using rule 14 (parameters)


State 29

   10 variable_type: TOKEN_OPEN_BRACKETS variable_type TOKEN_CLOSE_BRACKETS .

    $default  reduce using rule 10 (variable_type)


State 30

   35 expression: TOKEN_TRUE .

    $default  reduce using rule 35 (expression)


State 31

   36 expression: TOKEN_FALSE .

    $default  reduce using rule 36 (expression)


State 32

   37 expression: TOKEN_CHARACTER .

    $default  reduce using rule 37 (expression)


State 33

   38 expression: TOKEN_INTEGER .

    $default  reduce using rule 38 (expression)


State 34

   39 expression: TOKEN_FLOAT .

    $default  reduce using rule 39 (expression)


State 35

   40 expression: TOKEN_STRING .

    $default  reduce using rule 40 (expression)


State 36

    5 define_variable: TOKEN_IDENTIFIER . TOKEN_COLON variable_type TOKEN_SEMICOLON
   33 variable: TOKEN_IDENTIFIER .
   60 function_call: TOKEN_IDENTIFIER . TOKEN_OPEN_PARENTHESES expression_list TOKEN_CLOSE_PARENTHESES
   61              | TOKEN_IDENTIFIER . TOKEN_OPEN_PARENTHESES TOKEN_CLOSE_PARENTHESES

    TOKEN_OPEN_PARENTHESES  shift, and go to state 55
    TOKEN_COLON             shift, and go to state 7

    $default  reduce using rule 33 (variable)


State 37

   45 expression: TOKEN_NEW . variable_type TOKEN_OPEN_BRACKETS expression TOKEN_CLOSE_BRACKETS

    TOKEN_WORD_BOOL      shift, and go to state 13
    TOKEN_WORD_CHAR      shift, and go to state 14
    TOKEN_WORD_INT       shift, and go to state 15
    TOKEN_WORD_FLOAT     shift, and go to state 16
    TOKEN_OPEN_BRACKETS  shift, and go to state 17

    variable_type  go to state 56


State 38

   25 command: TOKEN_IF . expression block
   26        | TOKEN_IF . expression block TOKEN_ELSE block

    TOKEN_TRUE              shift, and go to state 30
    TOKEN_FALSE             shift, and go to state 31
    TOKEN_CHARACTER         shift, and go to state 32
    TOKEN_INTEGER           shift, and go to state 33
    TOKEN_FLOAT             shift, and go to state 34
    TOKEN_STRING            shift, and go to state 35
    TOKEN_IDENTIFIER        shift, and go to state 57
    TOKEN_NEW               shift, and go to state 37
    TOKEN_OPEN_PARENTHESES  shift, and go to state 41
    TOKEN_SUBTRACT          shift, and go to state 43
    TOKEN_NOT               shift, and go to state 44

    variable       go to state 58
    expression     go to state 59
    function_call  go to state 60


State 39

   27 command: TOKEN_WHILE . expression block

    TOKEN_TRUE              shift, and go to state 30
    TOKEN_FALSE             shift, and go to state 31
    TOKEN_CHARACTER         shift, and go to state 32
    TOKEN_INTEGER           shift, and go to state 33
    TOKEN_FLOAT             shift, and go to state 34
    TOKEN_STRING            shift, and go to state 35
    TOKEN_IDENTIFIER        shift, and go to state 57
    TOKEN_NEW               shift, and go to state 37
    TOKEN_OPEN_PARENTHESES  shift, and go to state 41
    TOKEN_SUBTRACT          shift, and go to state 43
    TOKEN_NOT               shift, and go to state 44

    variable       go to state 58
    expression     go to state 61
    function_call  go to state 60


State 40

   29 command: TOKEN_RETURN . expression TOKEN_SEMICOLON

    TOKEN_TRUE              shift, and go to state 30
    TOKEN_FALSE             shift, and go to state 31
    TOKEN_CHARACTER         shift, and go to state 32
    TOKEN_INTEGER           shift, and go to state 33
    TOKEN_FLOAT             shift, and go to state 34
    TOKEN_STRING            shift, and go to state 35
    TOKEN_IDENTIFIER        shift, and go to state 57
    TOKEN_NEW               shift, and go to state 37
    TOKEN_OPEN_PARENTHESES  shift, and go to state 41
    TOKEN_SUBTRACT          shift, and go to state 43
    TOKEN_NOT               shift, and go to state 44

    variable       go to state 58
    expression     go to state 62
    function_call  go to state 60


State 41

   42 expression: TOKEN_OPEN_PARENTHESES . expression TOKEN_CLOSE_PARENTHESES

    TOKEN_TRUE              shift, and go to state 30
    TOKEN_FALSE             shift, and go to state 31
    TOKEN_CHARACTER         shift, and go to state 32
    TOKEN_INTEGER           shift, and go to state 33
    TOKEN_FLOAT             shift, and go to state 34
    TOKEN_STRING            shift, and go to state 35
    TOKEN_IDENTIFIER        shift, and go to state 57
    TOKEN_NEW               shift, and go to state 37
    TOKEN_OPEN_PARENTHESES  shift, and go to state 41
    TOKEN_SUBTRACT          shift, and go to state 43
    TOKEN_NOT               shift, and go to state 44

    variable       go to state 58
    expression     go to state 63
    function_call  go to state 60


State 42

   20 block: TOKEN_OPEN_BRACES TOKEN_CLOSE_BRACES .

    $default  reduce using rule 20 (block)


State 43

   46 expression: TOKEN_SUBTRACT . expression

    TOKEN_TRUE              shift, and go to state 30
    TOKEN_FALSE             shift, and go to state 31
    TOKEN_CHARACTER         shift, and go to state 32
    TOKEN_INTEGER           shift, and go to state 33
    TOKEN_FLOAT             shift, and go to state 34
    TOKEN_STRING            shift, and go to state 35
    TOKEN_IDENTIFIER        shift, and go to state 57
    TOKEN_NEW               shift, and go to state 37
    TOKEN_OPEN_PARENTHESES  shift, and go to state 41
    TOKEN_SUBTRACT          shift, and go to state 43
    TOKEN_NOT               shift, and go to state 44

    variable       go to state 58
    expression     go to state 64
    function_call  go to state 60


State 44

   57 expression: TOKEN_NOT . expression

    TOKEN_TRUE              shift, and go to state 30
    TOKEN_FALSE             shift, and go to state 31
    TOKEN_CHARACTER         shift, and go to state 32
    TOKEN_INTEGER           shift, and go to state 33
    TOKEN_FLOAT             shift, and go to state 34
    TOKEN_STRING            shift, and go to state 35
    TOKEN_IDENTIFIER        shift, and go to state 57
    TOKEN_NEW               shift, and go to state 37
    TOKEN_OPEN_PARENTHESES  shift, and go to state 41
    TOKEN_SUBTRACT          shift, and go to state 43
    TOKEN_NOT               shift, and go to state 44

    variable       go to state 58
    expression     go to state 65
    function_call  go to state 60


State 45

   31 command: TOKEN_AT_SIGN . expression TOKEN_SEMICOLON

    TOKEN_TRUE              shift, and go to state 30
    TOKEN_FALSE             shift, and go to state 31
    TOKEN_CHARACTER         shift, and go to state 32
    TOKEN_INTEGER           shift, and go to state 33
    TOKEN_FLOAT             shift, and go to state 34
    TOKEN_STRING            shift, and go to state 35
    TOKEN_IDENTIFIER        shift, and go to state 57
    TOKEN_NEW               shift, and go to state 37
    TOKEN_OPEN_PARENTHESES  shift, and go to state 41
    TOKEN_SUBTRACT          shift, and go to state 43
    TOKEN_NOT               shift, and go to state 44

    variable       go to state 58
    expression     go to state 66
    function_call  go to state 60


State 46

   21 define_variables: define_variable .

    $default  reduce using rule 21 (define_variables)


State 47

   32 command: block .

    $default  reduce using rule 32 (command)


State 48

   17 block: TOKEN_OPEN_BRACES define_variables . commands TOKEN_CLOSE_BRACES
   18      | TOKEN_OPEN_BRACES define_variables . TOKEN_CLOSE_BRACES
   22 define_variables: define_variables . define_variable

    TOKEN_TRUE              shift, and go to state 30
    TOKEN_FALSE             shift, and go to state 31
    TOKEN_CHARACTER         shift, and go to state 32
    TOKEN_INTEGER           shift, and go to state 33
    TOKEN_FLOAT             shift, and go to state 34
    TOKEN_STRING            shift, and go to state 35
    TOKEN_IDENTIFIER        shift, and go to state 36
    TOKEN_NEW               shift, and go to state 37
    TOKEN_IF                shift, and go to state 38
    TOKEN_WHILE             shift, and go to state 39
    TOKEN_RETURN            shift, and go to state 40
    TOKEN_OPEN_PARENTHESES  shift, and go to state 41
    TOKEN_OPEN_BRACES       shift, and go to state 25
    TOKEN_CLOSE_BRACES      shift, and go to state 67
    TOKEN_SUBTRACT          shift, and go to state 43
    TOKEN_NOT               shift, and go to state 44
    TOKEN_AT_SIGN           shift, and go to state 45

    define_variable  go to state 68
    block            go to state 47
    commands         go to state 69
    command          go to state 50
    variable         go to state 51
    expression       go to state 52
    function_call    go to state 53


State 49

   19 block: TOKEN_OPEN_BRACES commands . TOKEN_CLOSE_BRACES
   24 commands: commands . command

    TOKEN_TRUE              shift, and go to state 30
    TOKEN_FALSE             shift, and go to state 31
    TOKEN_CHARACTER         shift, and go to state 32
    TOKEN_INTEGER           shift, and go to state 33
    TOKEN_FLOAT             shift, and go to state 34
    TOKEN_STRING            shift, and go to state 35
    TOKEN_IDENTIFIER        shift, and go to state 57
    TOKEN_NEW               shift, and go to state 37
    TOKEN_IF                shift, and go to state 38
    TOKEN_WHILE             shift, and go to state 39
    TOKEN_RETURN            shift, and go to state 40
    TOKEN_OPEN_PARENTHESES  shift, and go to state 41
    TOKEN_OPEN_BRACES       shift, and go to state 25
    TOKEN_CLOSE_BRACES      shift, and go to state 70
    TOKEN_SUBTRACT          shift, and go to state 43
    TOKEN_NOT               shift, and go to state 44
    TOKEN_AT_SIGN           shift, and go to state 45

    block          go to state 47
    command        go to state 71
    variable       go to state 51
    expression     go to state 52
    function_call  go to state 53


State 50

   23 commands: command .

    $default  reduce using rule 23 (commands)


State 51

   28 command: variable . TOKEN_ASSIGNMENT expression TOKEN_SEMICOLON
   41 expression: variable .

    TOKEN_ASSIGNMENT  shift, and go to state 72

    $default  reduce using rule 41 (expression)


State 52

   34 variable: expression . TOKEN_OPEN_BRACKETS expression TOKEN_CLOSE_BRACKETS
   44 expression: expression . TOKEN_AS variable_type
   47           | expression . TOKEN_ADD expression
   48           | expression . TOKEN_SUBTRACT expression
   49           | expression . TOKEN_MULTIPLY expression
   50           | expression . TOKEN_DIVIDE expression
   51           | expression . TOKEN_EQUAL expression
   52           | expression . TOKEN_NOT_EQUAL expression
   53           | expression . TOKEN_LESS_EQUAL expression
   54           | expression . TOKEN_GREATER_EQUAL expression
   55           | expression . TOKEN_LESS expression
   56           | expression . TOKEN_GREATER expression
   58           | expression . TOKEN_AND expression
   59           | expression . TOKEN_OR expression
